[tool.poetry]
name = "tartini"
version = "0.1.0"
description = ""
authors = ["Pedro Rodriguez <me@pedro.ai>"]
license = "Apache2"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.7"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
